style.css
/* ... */
.main-wrapper {
	margin: 0 auto;
	width: auto;
	max-width: 940px;
}

.main-wrapper ul li{
	float: left;
	margin-right; 5px;
}

a {
	text-decoration: none;
}

body {
	background-color: white
}

header nav {
	width: 100%;
	height: 60px;
	position: fixed;
	z-index: 1000;
	background-color: #665882
}

#header-items {
	margin: 0 auto;
}

#logoandtitle {
	float: left;
	display: inline-block;
	height: 59px;
	line-height: 57px;
	cursor: pointer;
}

#logoandtitle img {
	display: inline-block;
	vertical-align: middle;
	border-radius: 5px;
	height: 40px;
	width: 40px;
}

header nav p {
	display: inline-block;
	padding-left: 12px;
	font-weight: bold;
	font-family: 'Montserrat', sans-serif;
	font-size: 16px;
	color: white;   
}

header nav ul li a {
	font-family: arial;
	font-size: 16px;
	color: #111;
	line-height: 63px;
}

header nav img {
	width: 20px;
	height: 20px;
}

header nav .alertcount {
	position: relative;
	right: 10px;
	bottom: 10px;
	background: red;
	color: white;
	border-radius: 0.8em;
	font-size: 10px;
	line-height: 1.5em;
	width: 1.5em;
	font-weight: bold;
	text-align: center;
	display: inline-block;
	visibility: hidden;
}

.requestitem {
	display: inline-block;
}

header .nav-login {
	float: right;
}

header .nav-login form {
	float: left;
	padding-top: 15px;
}

header .nav-login form input {
	float: left;
	width: 140px;
	height: 30px;
	padding: 0px 10px;
	margin-right: 10px;
	border: none;
	font-family: arial;
	font-size: 14px;
	color: #111;
	line-height: 30px;
	border-radius: 5px;
}

header .nav-login form button {
	float: left;
	width: 60px;
	height: 30px;
	margin-right: 10px;
	border: none;
	background-color: #f3f3f3;
	font-family: arial;
	font-size: 14px;
	color: #111;
	cursor: pointer;
	border-radius: 5px;
}

header .nav-login form button:hover {
	background-color: #ccc;
}

header .nav-login a {
	padding: 2px 0px 0px 10px;
	display: block;
	font-family: arial;
	font-size: 11px;
	color: white;
	cursor: pointer;
}

#loggedoutmain {
	display: flex;
	margin: 0 auto;
}

.main-container {
	padding-top:70px;
	flex: 1;
	background-image: linear-gradient(to bottom, rgb(218, 214, 234), rgba(255, 255, 255, 0.73)),url(https://i0.wp.com/www.intelligentliving.co/wp-content/uploads/2019/08/Planting-trees.jpg?w=1751&ssl=1);
}

.main-container-text {
	padding: 100px;
}

.main-container h2 {
	font-size: 17px;
	color: #605395;
	line-height: 50px;
	text-align: left;
	font-family: 'Noto Serif JP', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

.main-container img {
	width: 100px;
	height: 100px;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.main-container h3 {
	font-size: 22px;
	color: #605395;
	line-height: 50px;
	text-align: left;
	font-family: 'Montserrat', sans-serif;
	margin-left: auto;
	margin-right: auto;
}

#loginorsignup {
	flex: 1;
	padding-top: 70px;
	background-color: #DAD6EA;
}

#loginorsignup-text {
	padding: 25px;
}

#loginorsignup .warning {
	color: white;
}

#headergreeting {
	display: block;
	float: left;
	padding-right: 10px;
	line-height: 63px;
	font-size: 20px;
	font-family: arial;
}

.benefits {
	padding-top: 70px;
}

/*mobile media query*/

@media (max-width:800px)  { 
	#main-about .mobile-signup a {
		display: block;
	}

	.menu-icon {
		  position: absolute;
		  float: left;
		  width: 20px;
		  height: 14px;
		  margin: auto;
		  top: 0;
		  right: 15px;
		  bottom: 1px;
	}

	.main-wrapper .menu-line{
		
		 background-color: #333;
		 height: 2px;
		 width: 100%;
		 border-radius: 2px;
		 position: absolute; 
		 left: 0;
	}
		
	.main-wrapper .menu-line-1 { 
		top: 0; 
	}

	.main-wrapper .menu-line-2 {
		 top: 0;
		 bottom: 0;
		 margin: auto;
	}

	.main-wrapper .menu-line-3 { 
		bottom: 0; 
	}

	#logoandtitle {
		margin-left: 12px;
	}

	.navlink {
		position: fixed;
		margin-top: 60px;
		width: 100%;
		background-color: white;
		right: -786px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	.navlink-out {
		position: fixed;
		margin-top: 60px;
		width: 100%;
		background-color: white;
		right: 0px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	.navlink ul {
		width: 100%;
		text-align: center;
	}
	
	.navlink li {
		width: 100%;
		border: .5px solid black;
	}
	
	header .nav-login {
		position: fixed;
		margin-top: 250px;
		width: 100%;
		background-color: white;
		border-top: 1px solid black;
		height: 60px;
		float: none;
		right: -786px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	header .nav-login-out {
		right: 0px;
		-webkit-transition: .5s ease-out;
		-moz-transition: .5s ease-out;
		-o-transition: .5s ease-out;
		-ms-transition: .5s ease-out;
		transition: .5s ease-out;
	}
	
	header .nav-login form {
		width: 100%;
		float: none;
		text-align: center;
	}
	
	header .nav-login form input {
		float: none;
	}
	
	header .nav-login form button {
		float: none;
	}
	
	header .nav-login a {
		display: none;
	}

	#loggedoutmain {
        	flex-direction: column;
	}
}
/* ... */

